align fix

--- a/style.css
+++ b/style.css
@@ -244,6 +244,10 @@ body {
     margin-left: 5%;
     margin-right: 5%;
 }
+.intro {
+  max-width: 100%;
+  max-height: 50vh;
+}
 .img-circular {
   max-width: 300px;
   max-height: 45vh;
